objects/Payment.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>The Total amount of the payment.</inlineHelpText>
        <label>Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The related customer who is making the payment</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Customer</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <inlineHelpText>The date of the transaction ID</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>